feat(api-gateway): author endpoints