@@ -2,6 +2,7 @@ package org.dainn.apigateway.config;
 
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.reactive.EnableWebFluxSecurity;
 import org.springframework.security.config.web.server.ServerHttpSecurity;
@@ -11,6 +12,7 @@ import org.springframework.security.oauth2.server.resource.authentication.Reacti
 import org.springframework.security.web.server.SecurityWebFilterChain;
 import reactor.core.publisher.Flux;
 
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
@@ -19,15 +21,101 @@ import java.util.stream.Collectors;
 @Configuration
 @EnableWebFluxSecurity
 public class SecurityConfig {
+    private static final String[] SERVICES = {
+            "user-service",
+            "agency-service",
+            "subscription-service",
+            "pipeline-service",
+            "funnel-service",
+            "media-service",
+            "notification-service",
+            "search-service",
+            "payment-service"
+    };
 
     @Bean
     public SecurityWebFilterChain springSecurityFilterChain(ServerHttpSecurity http) {
+        String[] apiDocsPatterns = Arrays.stream(SERVICES)
+                .map(service -> "/" + service + "/v3/api-docs/**")
+                .toArray(String[]::new);
         http
                 .csrf(ServerHttpSecurity.CsrfSpec::disable)
                 .authorizeExchange(exchange -> exchange
-                        .pathMatchers("/eureka/**").permitAll()
-                        .pathMatchers("/**").permitAll()
-                        .anyExchange().authenticated())
+                                .pathMatchers("/eureka/**", "/swagger-ui/**", "/v3/api-docs/**", "/api/users/sync", "/api/payments/**").permitAll()
+                                .pathMatchers(apiDocsPatterns).permitAll()
+
+                                // User Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/users/**", "/api/permissions/**", "/api/invitations/pending/**", "/api/sub-accounts/agency/**", "/api/contacts/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER", "ROLE_SUBACCOUNT_GUEST")
+
+                                .pathMatchers(HttpMethod.POST, "/api/users/**", "/api/permissions", "/api/invitations", "/api/sub-accounts")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+                                .pathMatchers(HttpMethod.PUT, "/api/users/**", "/api/permissions/**", "/api/sub-accounts/**", "/api/contacts/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.DELETE, "/api/invitations/**", "/api/sub-accounts", "/api/contacts")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+                                // Search Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/search/users/sub-members/**", "/api/search/users/members/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+                                // Notification Service Endpoints
+                                .pathMatchers("/api/notifications/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                // Media Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/medias/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER", "ROLE_SUBACCOUNT_GUEST")
+
+                                .pathMatchers(HttpMethod.POST, "/api/medias/upload", "/api/medias/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.DELETE, "/api/medias/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                // Funnel Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/funnels/**", "/api/funnel-pages/**", "/api/class-names/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER", "ROLE_SUBACCOUNT_GUEST")
+
+                                .pathMatchers(HttpMethod.POST, "/api/funnels/**", "/api/funnel-pages/**", "/api/class-names/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.PUT, "/api/funnels/**", "/api/funnel-pages/**", "/api/class-names/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.DELETE, "/api/funnels/**", "/api/funnel-pages/**", "/api/class-names/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                // Agency Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/agencies/**", "/api/agency-sos/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+//                        .pathMatchers(HttpMethod.POST, "/api/agencies/**", "/api/agency-sos/**")
+//                        .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+                                .pathMatchers(HttpMethod.PUT, "/api/agencies/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN")
+
+                                .pathMatchers(HttpMethod.DELETE, "/api/agencies/**", "/api/agency-sos/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER")
+
+                                // Pipeline Service Endpoints
+                                .pathMatchers(HttpMethod.GET, "/api/pipelines/**", "/api/lanes/**", "/api/tickets/**", "/api/tags/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.POST, "/api/pipelines/**", "/api/lanes/**", "/api/tickets/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.PUT, "/api/pipelines/**", "/api/lanes/**", "/api/tickets/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .pathMatchers(HttpMethod.DELETE, "/api/pipelines/**", "/api/lanes/**", "/api/tickets/**")
+                                .hasAnyAuthority("ROLE_AGENCY_OWNER", "ROLE_AGENCY_ADMIN", "ROLE_SUBACCOUNT_USER")
+
+                                .anyExchange().authenticated()
+                )
                 .oauth2ResourceServer(oAuth -> oAuth
                         .jwt(Customizer.withDefaults()));
         return http.build();
@@ -38,21 +126,13 @@ public class SecurityConfig {
     public ReactiveJwtAuthenticationConverter jwtAuthenticationConverter() {
         ReactiveJwtAuthenticationConverter converter = new ReactiveJwtAuthenticationConverter();
         converter.setJwtGrantedAuthoritiesConverter(jwt -> {
-            Map<String, Object> rolesMap = jwt.getClaimAsMap("roles");
-            List<String> roles;
-            if (rolesMap != null && rolesMap.containsKey("role")) {
-                Object role = rolesMap.get("role");
-                if (role instanceof String) {
-                    roles = List.of((String) role);
-                } else {
-                    roles = Collections.emptyList();
-                }
+            String role = jwt.getClaimAsString("role");
+            List<GrantedAuthority> authorities;
+            if (role != null && !role.isEmpty()) {
+                authorities = List.of(new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()));
             } else {
-                roles = Collections.emptyList();
+                authorities = Collections.emptyList();
             }
-            List<GrantedAuthority> authorities = roles.stream()
-                    .map(role -> new SimpleGrantedAuthority("ROLE_" + role.toUpperCase()))
-                    .collect(Collectors.toList());
             converter.setPrincipalClaimName("id");
             return Flux.fromIterable(authorities);
         });
